--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "main": "./lib/recent-files",
   "version": "0.0.0",
   "private": true,
-  "description": "A short description of your package",
-  "repository": "https://github.com/atom/recent-files",
+  "description": "Allows for opening recent files/folders",
+  "repository": "https://github.com/goddardc/atom-recent-files",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
